Klar med fixning

--- a/style.css
+++ b/style.css
@@ -45,7 +45,28 @@ body {
 	font-family: 'Kaushan Script', cursive;
 
 }
+
 #Gamename {
+	font-family: 'Kaushan Script', cursive;
+}
+
+#Sitename2 {
+	font-size: 600%;
+	font-family: 'Kaushan Script', cursive;
+
+}
+
+#Gamename2 {
+	font-family: 'Kaushan Script', cursive;
+}
+
+#Sitename3 {
+	font-size: 600%;
+	font-family: 'Kaushan Script', cursive;
+
+}
+
+#Gamename3 {
 	font-family: 'Kaushan Script', cursive;
 }
 
